Bug fixing: 1) days without measurement were one day late in file for daily statistics. 2) reset of heightref was not taken care of in correlate-function -> if/else-construct was combined in one if with multiple OR
Feature added:
Daily statistics for steps and height are shown, target values can be set were number color changes from red to green.

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -58,5 +58,8 @@
     <string name="permission_sdcard_granted">Zulassung zum Schreiben auf SD-Karte erhalten.</string>
     <string name="height_init1">999 m</string>
     <string name="pref_title_debug">Debug-Ausgaben</string>
-    <string name="debug_create_finished"></string>
+    <string name="daily_steps">Schritte heute:</string>
+    <string name="height_today">Höhe heute:</string>
+    <string name="height">Höhe</string>
+    <string name="pref_cat_target">Ziel für Tageswerte</string>
 </resources>
