Feature release: - Change design, esp. progress bar - Update daily values on Resume (including write of statistics data) - save last regular statistic of day with 24:00 instead of 0:00 on next day - -1-values will be saved in statistics file if app is used but not measured - 0-values are not accepted in max. files to keep - preference will not be saved

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,13 +54,13 @@
     <string name="pref_stat_sum">Data will be saved to directory StepandHeightCounter on SD-Card</string>
     <string name="pref_title_stat_hour">Regular statistics</string>
     <string name="pref_title_stat_hour_clear">AutoClean of regular statistics</string>
-    <string name="pref_stat_clear_sum">Delete old files</string>
+    <string name="pref_stat_clear_sum">Delete old files.\n(Change will take effect when next file is created)</string>
     <string name="pref_title_stat_clear_num">Maximum files</string>
-    <string name="pref_stat_clear_num_sum">Maximum number of files to keep</string>
+    <string name="pref_stat_clear_num_sum">Maximum number of files to keep.\n(Change will take effect when next file is created)</string>
     <string name="pref_title_stat_hour_min">Interval</string>
     <string name="pref_stat_hour_min_sum">Interval for saving regular statistics</string>
     <string name="pref_title_stat_daily">Daily statistics</string>
-    <string name="pref_stat_daily_sum">Save step and elevation gain for every day. One file per year. There\'s no AutoClean.</string>
+    <string name="pref_stat_daily_sum">Save step and elevation gain for every day. One file per year.\nThere\'s no AutoClean.</string>
     <string name="pref_stat_hour_sum">Save step and elevation gain at a regular interval.</string>
     <string name="pref_stat_hour_list_1">15 minutes</string>
     <string name="pref_stat_hour_list_2">1/2 hour</string>
