New Icon, some minor changes

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -32,20 +32,20 @@
     <string name="running">läuft</string>
     <string name="stepsensor_not_activated">Schrittzähler kann nicht aktiviert werden!</string>
     <string name="pref_title_stat_detail">Detaillierte Statistiken</string>
-    <string name="pref_title_stat_detail_clear">Autom. Bereinigung der det. Statistiken.</string>
-    <string name="pref_stat_detail_sum">Zu jedem Sensor Event werden Schritte und Höhenmeter gespeichert. Pro Tag wird eine Datei gespeichert.</string>
+    <string name="pref_title_stat_detail_clear">Autom. Bereinigung der det. Statistiken</string>
+    <string name="pref_stat_detail_sum">Zu jedem Sensor Event und Marker werden Schritte und Höhenmeter gespeichert, pro Tag wird eine Datei gespeichert.\nBei Deaktivierung werden trotzdem Marker gespeichert.</string>
     <string name="pref_cat_deb">Debugging</string>
     <string name="pref_cat_stat">Statistiken</string>
     <string name="pref_cat_stat_det">Detaillierte Statistik</string>
     <string name="text_reset">Schritte und Höhenmeter zurücksetzen.</string>
-    <string name="pref_stat_clear_num_sum">Maximale Anzahl an Dateien. (Änderung wird erst wirksam, wenn die nächste Datei erzeugt wird.)</string>
-    <string name="pref_stat_clear_sum">Alte Dateien werden gelöscht. (Änderung wird erst wirksam, wenn die nächste Datei erzeugt wird.)</string>
-    <string name="pref_stat_daily_sum">Jeden Tag werden Schritte und Höhenmeter gespeichert. Pro Jahr wird eine Datei erzeugt\nEs gibt kein automatisches Löschen.</string>
-    <string name="pref_stat_hour_min_sum">Intervall für die Speicherung von regelmäßigen Statistiken.</string>
+    <string name="pref_stat_clear_num_sum">Maximale Anzahl an Dateien. (Änderung wird erst wirksam, wenn die nächste Datei erzeugt wird)</string>
+    <string name="pref_stat_clear_sum">Alte Dateien werden gelöscht. (Änderung wird erst wirksam, wenn die nächste Datei erzeugt wird)</string>
+    <string name="pref_stat_daily_sum">Jeden Tag werden Schritte und Höhenmeter gespeichert, pro Jahr wird eine Datei erzeugt.\nEs gibt kein automatisches Löschen.</string>
+    <string name="pref_stat_hour_min_sum">Intervall für die Speicherung von regelmäßigen Statistiken</string>
     <string name="pref_stat_hour_sum">Schritte und Höhenmeter werden in regelmäßigen Intervallen gespeichert.</string>
     <string name="pref_stat_sum">Daten werden in das Verzeichnis \"StepandHeightCounter\" auf der (internen) SD-Karte geschrieben.</string>
     <string name="pref_title_stat_hour">Regelmäßige Statistiken</string>
-    <string name="pref_title_stat_hour_clear">Autom. Bereinigung der regelm. Statistiken.</string>
+    <string name="pref_title_stat_hour_clear">Autom. Bereinigung der regelm. Statistiken</string>
     <string name="pref_title_stat_hour_min">Intervall</string>
     <string name="pref_title_stat_daily">Tägliche Statistiken</string>
     <string name="pref_title_stat_clear_num">Maximale Anzahl Dateien.</string>
