--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,7 +55,7 @@
     <string name="pref_title_stat_hour_clear">AutoClean of regular statistics</string>
     <string name="pref_stat_clear_sum">Delete old files.\n(Change will take effect when next file is created)</string>
     <string name="pref_title_stat_clear_num">Maximum files</string>
-    <string name="pref_stat_clear_num_sum">Maximum number of files to keep.\n(Change will take effect when next file is created)</string>
+    <string name="pref_stat_clear_num_sum">Maximum number of files to keep.</string>
     <string name="pref_title_stat_hour_min">Interval</string>
     <string name="pref_stat_hour_min_sum">Interval for saving regular statistics</string>
     <string name="pref_title_stat_daily">Daily statistics</string>
@@ -84,5 +84,14 @@
     <string name="stat_type_calibration_before">Before calibration</string>
     <string name="stat_type_calibration_after">After calibration</string>
     <string name="stat_type_reset_after">After reset</string>
+    <string name="alert_title_num_change">Delete old files!</string>
+    <string name="alert_message_num_changed">This will immediately delete all old files according to setting! Are you sure?</string>
+    <string name="No">No</string>
+    <string name="Yes">Yes</string>
+    <string name="alert_title_autoclean_change">Delete old files!</string>
+    <string name="alert_message_autoclean_changed">This will immediately delete all old files according to setting! Are you sure?</string>
+    <string name="OK">OK</string>
+    <string name="alert_title_zero_num">0 not allowed</string>
+    <string name="alert_message_zero_num">0 is not allowed for number of files to keep.</string>
 
 </resources>
