--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -24,6 +24,9 @@
     <string name="no_data">Keine Werte</string>
     <string name="height_m">Höhe [m]</string>
     <string name="height_accumulated">Höhenmeter</string>
+    <string name="desc_accumulated">Abstieg</string>
+    <string name="heightdesc_accumulated">Höhenmeter auf/ab</string>
+    <string name="time_accumulated">Abgelaufene Zeit</string>
     <string name="steps">Schritte</string>
     <string name="stop_service_notice">Hinweis wird wieder ausgeblendet, App muss neu gestartet werden, alle Daten gehen verloren!</string>
     <string name="pref_sum_debug">Viele unnötige Statusinformationen, die die SD-Karte zumüllen. Wird auch nicht bereinigt!</string>
