--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,8 +29,8 @@
     <string name="height_init1">999 m</string>
     <string name="zero" translatable="false">0</string>
     <string name="height_accumulated">Elevation gain</string>
-    <string name="desc_accumulated">Elevation loss</string>
-    <string name="heightdesc_accumulated">Elevation gain/loss</string>
+    <string name="decr_accumulated">Elevation loss</string>
+    <string name="heightdesc_accumulated">Elev. gain/loss</string>
     <string name="time_accumulated">Time running</string>
     <string name="zero_m" translatable="false">0 m</string>
     <string name="zerozero_m" translatable="false">0 / 0 m</string>
